# TransitArrivalBoard

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.ts  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
app/: page.tsx
app/components/: Bullet.tsx  Bulletin.tsx  Calendar.tsx  Countdown.tsx  Message.tsx
src/: bus_stop_handler.rs  config.rs  feed_handler.rs  lib.rs  main.rs  subway_stop_handler.rs
types/: Alert.ts  Export.ts  Import.ts  Route.ts  Stop.ts  Vehicle.ts
