[package]
name = "transit-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
minreq ={ version="2.11.0", features=["https"] }
dotenvy = "0.15.7"
prost = "0.12.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tungstenite = "0.21.0"
crossbeam-channel = "0.5.12"
gtfs-structures = { version="0.41.2", default-features=false, features=[] }
chrono = { version="0.4.38", features = ["alloc"]}
ts-rs = { version="8.1", features=["serde-compat"]}
rgb = { version="0.8.37", features = ["serde"]}
rss = "2.0"

[build-dependencies]
prost-build = { version = "0.12.3" }

[lints.rust]
unsafe_code = "forbid"
